swagger fix and tickets route
